--- a/html/instruction.html
+++ b/html/instruction.html
@@ -1,2 +1,2 @@
-<h1>Instrucciones</h1>
-<span ng-click="vm.open = 0" style="position: absolute;top:7px;right:14px;font-size: 22pt; cursor: pointer;">X</span>
+<span ng-click="vm.open = 0" style="position: absolute;top:7px;right:14px;font-size: 22pt; cursor: pointer;"><img src="img/cerrar.png" width="50px" alt=""></span>
+<img class="center-block" src="img/instrucciones.png" alt="">
