--- a/html/presentation.html
+++ b/html/presentation.html
@@ -18,9 +18,11 @@
     </div>
     <div class="col-md-8">
         <div class="row">
-            <div class="col-md-12"> <h1 style="color:#fff;font-size: 100px !important;">FRASE <br> MOTIVADORA</h1> </div>
+            <div class="col-md-12"> <h1 style="color:#fff;font-size: 28pt !important;">"Un líder inspirador acompaña su equipo a dar  lo mejor, para ello, celebra las fortalezas y acompaña a las personas a superar las dificultades"</h1>
+                <br><h3 style="color:#fff;">Daniel Goleman</h3> </div>
         </div>
     </div>
-    <a class="btn btn-success btn-large" style="position: absolute;bottom: 40px;right: 20px;"  href="#/home">INICIO</a>
+    <div class="cuadro_der arriba_abajo delay5000" style="left: 780px; top: 460px; width: 190px; font-size: 14pt;">Da clic aquí para empezar</div>
+    <a class="btn btn-success btn-large animated pulse infinite" style="position: absolute;bottom: 40px;right: 20px;width: 140px; height: 60px; line-height: 47px; font-size: 21pt;"  href="#/home">INICIO</a>
 </div>
 
