--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
         <title>Plantilla</title>
         <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+        <!--<link rel="stylesheet" href="bower_components/video.js/dist/video-js.css">-->
+        <link href="http://vjs.zencdn.net/4.7/video-js.css" rel="stylesheet">
         <link rel="stylesheet" href="css/animate.css">
+        <link rel="stylesheet" href="css/animaciones.css">
+        <link rel="stylesheet" href="css/cuadros.css">
         <link rel="stylesheet" href="css/style.css">
 
-        <link href="http://vjs.zencdn.net/5.10.2/video-js.css" rel="stylesheet">
+
         <!--[if lt IE 9]>
-        <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+
         <![endif]-->
         <!--[if lt IE 9]>
         <script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
@@ -37,7 +41,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/es5-shim/4.5.7/es5-shim.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/es5-shim/4.5.7/es5-sham.min.js"></script>
         <!-- If you'd like to support IE8 -->
-        <script src="http://vjs.zencdn.net/ie8/1.1.2/videojs-ie8.min.js"></script>
+
 
     </head>
     <body ng-app="plantilla" class="background1">
@@ -46,28 +50,39 @@
         </section>
 
 
-        <script src="http://vjs.zencdn.net/5.10.2/video.js"></script>
 
+        <!--<script src="bower_components/video.js/dist/video.js"></script>-->
+        <!--<script src="bower_components/video.js/dist/ie8/videojs-ie8.js"></script>-->
 
+        <script src="http://vjs.zencdn.net/4.7/video.js"></script>
         <script src="js/app.js"></script>
         <script src="js/services/ScrollToService.js"></script>
         <script src="js/services/ActivitiesService.js"></script>
+        <script src="js/services/NavigationService.js"></script>
         <script src="js/controllers/PresentationController.js"></script>
         <script src="js/controllers/NavigationController.js"></script>
         <script src="js/controllers/AController.js"></script>
         <script src="js/controllers/A1Controller.js"></script>
+        <script src="js/controllers/A2Controller.js"></script>
         <script src="js/controllers/A3Controller.js"></script>
         <script src="js/controllers/BController.js"></script>
         <script src="js/controllers/B1Controller.js"></script>
+        <script src="js/controllers/B2Controller.js"></script>
         <script src="js/controllers/B3Controller.js"></script>
         <script src="js/controllers/CController.js"></script>
         <script src="js/controllers/C1Controller.js"></script>
+        <script src="js/controllers/C2Controller.js"></script>
         <script src="js/controllers/C3Controller.js"></script>
         <script src="js/controllers/DController.js"></script>
         <script src="js/controllers/D1Controller.js"></script>
+        <script src="js/controllers/D2Controller.js"></script>
         <script src="js/controllers/D3Controller.js"></script>
         <script src="js/controllers/EController.js"></script>
         <script src="js/controllers/E1Controller.js"></script>
+        <script src="js/controllers/E2Controller.js"></script>
         <script src="js/controllers/E3Controller.js"></script>
+
+
+
     </body>
 </html>
