--- a/html/a3.html
+++ b/html/a3.html
@@ -1,29 +1,34 @@
 <div class="animated zoomIn" style="height: 600px;">
+    <a href="#/home/a" class="cerrar"><img src="img/cerrar.png" alt=""></a>
     <div id="actividad">
-        <a href="#/home/a" class="cerrar">X</a>
         <div class="pag">
             <div ng-hide="a3Ctrl.acierto">
                 <div class="col-md-12">
                     <br/> <br/>
-                    <video id="player1" src="video/PT1.v1.mp4" width="520">
+                    <video controls width="500" height="340" class="center-block video-js vjs-default-skin"  preload="auto"  data-setup='{"example_option":true}'>
                         <source src="video/video1.mp4" type="video/mp4">
                         <source src="video/video1.ogg" type="video/ogg">
                         <source src="video/video1.webm" type="video/webm">
+                        <source src="video/video1.flv" type='video/x-flv'>
+                        <p class="vjs-no-js">
+                            To view this video please enable JavaScript, and consider upgrading to a web browser that
+                            <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
+                        </p>
                     </video>
                 </div>
                 <div class="col-md-12">
-                    <br/> <br/>
+                    <br/>
                     <div style="width: 80%;position: relative;margin: 35px auto;">
                         <h4>{{a3Ctrl.title}}</h4>
                         <br>
                         <ul>
-                            <li ng-repeat="i in a3Ctrl.items" ng-click="a3Ctrl.validar($index)"><input type="radio" name="{{a3Ctrl.options[$parent.$index]}}" ng-click="a3Ctrl.cambiavalor($parent.$index,$index)"/> {{i}}</li>
+                            <li style="cursor: pointer;font-size: 13pt;" ng-repeat="i in a3Ctrl.items" ng-click="a3Ctrl.validar($index)"><span class="glyphicon glyphicon-unchecked"></span> {{i}}</li>
                         </ul>
                     </div>
                 </div>
             </div>
             <div ng-show="a3Ctrl.acierto">
-                <h1 style="text-align: center;line-height: 500px;">{{a3Ctrl.mensaje}}</h1>
+                <a ng-href="#/home/{{a3Ctrl.redirect}}" ng-click="a3Ctrl.acierto = !a3Ctrl.acierto"><img class="center-block" ng-src="img/{{a3Ctrl.retro}}" alt=""></a>
             </div>
         </div>
     </div>
